change primary color

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   --font-montserrat: Montserrat, sans-serif;
 
   /* --color-primary: #1B5E20; */
-  --color-primary: #1B4D3E;
+  /* --color-primary: #1B4D3E; */
+  --color-primary: #4CAF50;
   --color-secondary: #FFD700;
   --color-tertiary: #1E1E1E;
 }
