--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@
   /* --color-primary: #1B5E20; */
   /* --color-primary: #1B4D3E; */
   --color-primary: #4CAF50;
-  --color-secondary: #FFD700;
+  /* --color-secondary: #FFD700; */
+  --color-secondary: #37474F;
   --color-tertiary: #1E1E1E;
 }
 
